--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: node_js
 node_js: 18
 jobs:
   include:
-    - script: cd ./matching-service
+    - script: cd ./cs3219-otot-taskb1-deployed/matching-service/
     - script: npm test
