--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
 language: node_js
 node_js: 17
-jobs:
-  include:
-    - script: cd ./cs3219-otot-taskb1-deployed/matching-service/
-    - script: npm test
+before_script: cd ./cs3219-otot-taskb1-deployed/matching-service/
