--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
 language: node_js
 node_js: 17
+rvices:
+  - postgresql
+addons:
+  postgresql: "13.7"
+apt:
+  packages:
+  - postgresql-13
+  - postgresql-client-13
+before_script:
+  - psql -c 'create database matchdb;' -U postgres
+  - sudo -u postgres psql < fill_db.sql
+
 before_install: cd ./cs3219-otot-taskb1-deployed/matching-service/
 install: npm i
-before_script: sudo service postgresql stop
