--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ apt:
   packages:
   - postgresql-13
   - postgresql-client-13
+env: 
+- AWS_DB_ENDPOINT=localhost
+- AWS_DB_USER=postgres
+- AWS_DB=matchdb
+- AWS_DB_PASSWORD= 
+- AWS_DB_PORT=5432
 before_script:
   - psql -c 'create database matchdb;' -U postgres
   - sudo -u postgres psql < fill_db.sql
