--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
 - AWS_DB_PASSWORD= 
 - AWS_DB_PORT=5432
 before_script:
-  - psql -c 'create database matchdb;' -U postgres
+  - psql -c 'create database matchdb;' -U postgres -p 5433
   - sudo -u postgres psql < fill_db.sql
 
 before_install: cd ./cs3219-otot-taskb1-deployed/matching-service/
