--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ node_js: 17
 services:
   - postgresql
 addons:
-  postgresql: "13.7"
-apt:
+  postgresql: 13
+  apt:
     packages:
     - postgresql-13
     - postgresql-client-13
