--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,23 @@ addons:
 env: 
   global:
   - PGPORT=5433
+  - AWS_DB_ENDPOINT=localhost
+  - AWS_DB_USER=postgres
+  - AWS_DB=matchdb
+  - AWS_DB_PASSWORD= 
+  - AWS_DB_PORT=5433
 before_script:
   - psql -c 'create database matchdb;' -U postgres -p 5433
   - sudo -u postgres psql < fill_db.sql
 
-before_install: cd ./cs3219-otot-taskb1-deployed/matching-service/
+before_install: 
+- cd ./cs3219-otot-taskb1-deployed/matching-service/
+# Use trust instead of peer authentication:
+- >-
+  sudo sed -i
+  -e '/local.*peer/s/postgres/all/'
+  -e 's/peer\|md5/trust/g'
+  /etc/postgresql/13/main/pg_hba.conf
+# Restart the PostgreSQL service:
+- sudo service postgresql@13-main restart
 install: npm i
