--- a/cs3219-otot-taskb1-deployed/matching-service/package.json
+++ b/cs3219-otot-taskb1-deployed/matching-service/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "node ./node_modules/mocha/bin/mocha"
+    "test": "mocha --exit"
   },
   "keywords": [],
   "author": "",
