--- a/.travis.yml
+++ b/.travis.yml
@@ -43,3 +43,6 @@ deploy:
   app: "cs3219ototb"
   env: "Cs3219ototb-env"
   bucket_name: " 	elasticbeanstalk-ap-southeast-1-031478831492"
+  branches:
+    only:
+      - main
